en layout cree la pestaña para poder realizar los registros

--- a/Gabriel_Padilla_P1/Views/PadillaG/Index.cshtml
+++ b/Gabriel_Padilla_P1/Views/PadillaG/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Gabriel_Padilla_P1.Models.PadillaG>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "index";
 }
 
 <h1>Index</h1>
