--- a/Gabriel_Padilla_P1/Views/PadillaG/Create.cshtml
+++ b/Gabriel_Padilla_P1/Views/PadillaG/Create.cshtml
@@ -38,11 +38,8 @@
                 <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CarreraId" class="control-label">Carrera:</label>
-                <select asp-for="CarreraId" class="form-control" asp-items="@(new SelectList(ViewBag.Carreras, "Id", "Nombre"))">
-                    <option value="">Selecciona una carrera</option>
-                </select>
-                <span asp-validation-for="CarreraId" class="text-danger"></span>
+                <label asp-for="CarreraId" class="control-label"></label>
+                <select asp-for="CarreraId" class ="form-control" asp-items="ViewBag.CarreraId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -56,7 +53,5 @@
 </div>
 
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
